# Utaite

./: CMakeLists.txt  me.doggirl.utaite.desktop
src/: CMakeLists.txt  main.cpp  playlistmanager.cpp  playlistmanager.h  resources.qrc  songmodel.cpp  songmodel.h  songsentrymodel.cpp  songsentrymodel.h  songsindex.cpp  songsindex.h
src/mpris/: mpris.cpp  mpris.h  mprisplayer.cpp  mprisplayer.h
src/ui/: CurrentlyPlayingPage.qml  IndexSheet.qml  Main.qml  QueueDrawer.qml  RoundedImage.qml  SongsListDelegate.qml
